@@ -7,12 +7,13 @@
 #include "openreadclose.h"
 #include "strerr.h"
 #include "pathexec.h"
+#include "sgetopt.h"
 
 #define FATAL "envdir: fatal: "
 
 void die_usage(void)
 {
-  strerr_die1x(111,"envdir: usage: envdir dir child");
+  strerr_die1x(111,"envdir: usage: envdir [ -p prefix ] dir child");
 }
 void nomem(void)
 {
@@ -20,6 +21,7 @@ void nomem(void)
 }
 
 static stralloc sa;
+static stralloc saname;
 
 int main(int argc,const char *const *argv)
 {
@@ -28,10 +30,17 @@ int main(int argc,const char *const *argv)
   DIR *dir;
   direntry *d;
   int i;
+  int opt;
+  const char *prefix = "";
+
+  while ((opt = getopt(argc,argv,"p:")) != opteof)
+    switch (opt) {
+    case 'p': prefix = optarg; break;
+    default: die_usage();
+    }
+  argv += optind;
 
   if (!*argv) die_usage();
-
-  if (!*++argv) die_usage();
   fn = *argv;
 
   if (!*++argv) die_usage();
@@ -56,6 +65,9 @@ int main(int argc,const char *const *argv)
     if (d->d_name[0] != '.') {
       if (openreadclose(d->d_name,&sa,256) == -1)
         strerr_die5sys(111,FATAL,"unable to read ",fn,"/",d->d_name);
+      if (!stralloc_copys(&saname,prefix)) nomem();
+      if (!stralloc_cats(&saname,d->d_name)) nomem();
+      if (!stralloc_0(&saname)) nomem();
       if (sa.len) {
         sa.len = byte_chr(sa.s,sa.len,'\n');
         while (sa.len) {
@@ -68,10 +80,10 @@ int main(int argc,const char *const *argv)
 	  if (!sa.s[i])
 	    sa.s[i] = '\n';
         if (!stralloc_0(&sa)) nomem();
-        if (!pathexec_env(d->d_name,sa.s)) nomem();
+        if (!pathexec_env(saname.s,sa.s)) nomem();
       }
       else {
-        if (!pathexec_env(d->d_name,0)) nomem();
+        if (!pathexec_env(saname.s,0)) nomem();
       }
     }
   }
