@@ -1,3 +1,5 @@
+Added support for adding a prefix in envdir.
+
 Changes in daemontools-encore-1.10
 ==================================
 
